--- a/Lesson03-Green-Recycler-View/T03.05-Exercise-GoingGreen/app/src/main/res/layout/number_list_item.xml
+++ b/Lesson03-Green-Recycler-View/T03.05-Exercise-GoingGreen/app/src/main/res/layout/number_list_item.xml
@@ -14,7 +14,8 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -28,13 +29,14 @@
         android:layout_gravity="center_vertical|start"
         android:fontFamily="monospace"
         android:textSize="42sp"
-        tools:text="#42" />
+        tools:text="#42"/>
 
-    <!--TODO (1) Add a TextView with id "@+id/tv_view_holder_instance-->
-    <!--TODO (2) Set the style to @style/TextAppearance.AppCompat.Title-->
-    <!--TODO (3) Set the width and the height to wrap_content-->
-    <!--TODO (4) Align the TextView to the end of the parent-->
-    <!--TODO (5) Align the TextView in the center vertically-->
-    <!--TODO (6) Set the font family to monospace-->
-    <!--TODO (7) Set the text color to "#000"-->
+    <TextView
+        android:id="@+id/tv_view_holder_instance"
+        style="@style/TextAppearance.AppCompat.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|end"
+        android:fontFamily="monospace"
+        android:textColor="#000"/>
 </FrameLayout>
